--- a/calculator.html
+++ b/calculator.html
@@ -7,16 +7,35 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Калькулятор</h1>
     <div class="calculator">
-      <input class="input1" type="text" />
-      <input class="input2" type="text" />
+      <h1>Калькулятор</h1>
+      <div>
+        <p class="calc">1234</p>
+      </div>
       <div class="btns">
-        <button class="plus">+</button>
-        <button class="minus">-</button>
-        <button class="multiply">*</button>
-        <button class="divide">/</button>
-        <button class="root">√</button>
+        <button class="btn ac btn-gray">ac</button>
+        <button class="btn plus-minus btn-gray">+/-</button>
+        <button class="btn persent btn-gray">%</button>
+        <button class="btn divide btn-orange">/</button>
+
+        <button class="btn seven">7</button>
+        <button class="btn eight">8</button>
+        <button class="btn nine">9</button>
+        <button class="btn multy btn-orange">X</button>
+
+        <button class="btn four">4</button>
+        <button class="btn five">5</button>
+        <button class="btn six">6</button>
+        <button class="btn minus btn-orange">-</button>
+
+        <button class="btn one">1</button>
+        <button class="btn two">2</button>
+        <button class="btn three">3</button>
+        <button class="btn plus btn-orange">+</button>
+
+        <button class="btn zero">0</button>
+        <button class="btn point">.</button>
+        <button class="btn equally btn-orange">=</button>
       </div>
     </div>
 
