сверстал, стилизовал, написал логику на js без eval и с использованием eval

--- a/calculator.html
+++ b/calculator.html
@@ -8,20 +8,19 @@
   </head>
   <body>
     <div class="calculator">
-      <h1>Калькулятор</h1>
       <div>
-        <p class="calc">1234</p>
+        <p class="calc"></p>
       </div>
       <div class="btns">
-        <button class="btn ac btn-gray">ac</button>
-        <button class="btn plus-minus btn-gray">+/-</button>
+        <button class="btn ac btn-gray">AC</button>
+        <button class="btn c btn-gray">C</button>
         <button class="btn persent btn-gray">%</button>
         <button class="btn divide btn-orange">/</button>
 
         <button class="btn seven">7</button>
         <button class="btn eight">8</button>
         <button class="btn nine">9</button>
-        <button class="btn multy btn-orange">X</button>
+        <button class="btn multy btn-orange">*</button>
 
         <button class="btn four">4</button>
         <button class="btn five">5</button>
