--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./calculator.css" />
+    <link rel="stylesheet" href="./index.css" />
     <title>Document</title>
   </head>
   <body>
@@ -38,6 +38,6 @@
       </div>
     </div>
 
-    <script src="./calculator.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
