--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="calculator">
-      <div>
+      <div class="div">
         <p class="calc"></p>
       </div>
       <div class="btns">
